fixing coverage